@@ -1,0 +1,6 @@
+package Foo::XS2;
+
+use strict;
+use warnings;
+
+1;
