@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - [AlienBase::Wrapper::Bundle] replaces existing bundled Alien::Base::Wrapper
 
 0.25      2019-02-19 20:35:58 -0500
   - Add [AlienBase::Wrapper::Bundle] plugin
